--- a/oks/package.json
+++ b/oks/package.json
@@ -45,5 +45,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://192.168.1.14/wp/wordpress/"
 }
