--- a/oks/package.json
+++ b/oks/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "oks",
   "version": "0.1.0",
@@ -46,5 +47,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://192.168.1.14/wp/wordpress/"
+  "proxy": "http://192.168.1.14/wordpress/"
 }
